Fix footer rendering on mobile
Don’t use flex box since order value was not respected on iOS/Safari

--- a/app/assets/stylesheets/new_common/footer.css.scss
+++ b/app/assets/stylesheets/new_common/footer.css.scss
@@ -6,53 +6,64 @@
 @import "../new_variables/sizes";
 
 .Footer {
+  position: relative;
   display: block;
   width: 100%;
   margin-top: $sMargin-group;
   padding: $sMargin-section 0;
   background: $cStructure-grayBkg;
-  box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 0 0 rgba(black, 0.1);
 }
 .Footer-inner {
-  @include display-flex();
-  @include flex-direction(column);
-  @include justify-content(center);
-  @include align-items(center);
+  margin-top: $sIcon-layout;
 }
-.Footer-logo { @include flex-order(1) }
-.Footer-list {
-  @include display-flex();
-  @include flex-direction(column);
-  @include justify-content(center);
-  @include align-items(center);
+.Footer-logo {
+  position: absolute;
+  top: $sMargin-element;
+  left: 50%;
+  margin-left: -$sIcon-layout / 2;
 }
 .Footer-listItem {
+  display: block;
   margin-top: $sMargin-element;
+  text-align: center;
 }
-.Footer-list--primary { @include flex-order(2) }
-.Footer-list--secondary { @include flex-order(3) }
-.Footer-listItem {
-  @include inline-block();
-  padding: 0 $sMargin-elementInline;
-}
+
 @media (min-width: $sMedia-tablet) {
   .Footer-list {
-    @include flex-direction(row);
+    @include display-flex();
+    @include align-items(center);
     width: 450px;
+    padding: 0 $sMargin-element;
   }
   .Footer-inner {
-    @include flex-direction(row);
+    @include display-flex();
     @include justify-content(space-between, justify);
+    @include align-items(center);
+    margin: 0 auto;
+  }
+  .Footer-logo {
+    position: static;
+    top: auto;
+    left: auto;
+    margin: 0;
   }
   .Footer-list--primary {
-    @include flex-order(1);
     @include justify-content(flex-start, start);
   }
-  .Footer-logo { @include flex-order(2) }
   .Footer-list--secondary {
-    @include flex-order(3);
     @include justify-content(flex-end, end);
+  }
+  .Footer-listItem {
+    margin: 0;
+    padding: 0 $sMargin-elementInline;
+    text-align: auto;
   }
   .Footer-listItem:first-child { padding-left: 0 }
   .Footer-listItem:last-child { padding-right: 0 }
+}
+@media (min-width: $sMedia-desktop) {
+  .Footer-list {
+    padding: 0;
+  }
 }
